k8s/client-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service 
spec:
  type: ClusterIP 
  selector:
    component: web
  ports:
    - port: 3000        # other pods access the pod through this port
      targetPort: 3000  # this is the port exposed on source pod, hardcoded in image
