k8s/postgres-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service 
spec:
  type: ClusterIP 
  selector:
    component: postgres
  ports:
    - port: 5432        # other pods access the pod through this port
      targetPort: 5432  # this is the port exposed on source pod, hardcoded in image
