k8s/redis-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service 
spec:
  type: ClusterIP 
  selector:
    component: redis
  ports:
    - port: 6379        # other pods access the pod through this port
      targetPort: 6379  # this is the port exposed on source pod, hardcoded in image
