k8s/server-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service 
spec:
  type: ClusterIP 
  selector:
    component: server
  ports:
    - port: 5000        # other pods access the pod through this port
      targetPort: 5000  # this is the port exposed on source pod, hardcoded in image
